--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "node-fetch": "^2.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-flexbox-grid": "^2.0.0",
+    "react-redux": "^5.0.7",
+    "react-redux-toastr": "^7.2.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "yarn": "^1.3.2"
   },
   "scripts": {
