--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.2.1",
     "axios": "^0.18.0",
+    "http-server": "^0.11.1",
     "node-fetch": "^2.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
