--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
+    "redux-promise": "^0.5.3",
+    "redux-promise-middleware": "^5.0.0",
+    "redux-thunk": "^2.2.0",
     "yarn": "^1.3.2"
   },
   "scripts": {
